--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -35,7 +35,7 @@
     </div>
   </aside>
 
-  <div class='divide-y divide-gray-200 lg:col-span-9 lg:pl-6'>
+  <div class='lg:col-span-9 lg:pl-6'>
     <%= render 'form' %>
   </div>
 
