Make the frontpage smaller on mobile devices

--- a/app/views/layouts/application_public.html.erb
+++ b/app/views/layouts/application_public.html.erb
@@ -23,7 +23,7 @@
   <%= yield %>
 
   <%= render 'layouts/footer' %>
-  <%= render 'layouts/debug' if Rails.env.development? %>
+  <%= render 'layouts/debug' if Rails.env.development? && params[:debug] == "true" %>
 </div>
 </body>
 </html>
