--- a/app/views/static_pages/frontpage.html.erb
+++ b/app/views/static_pages/frontpage.html.erb
@@ -1,7 +1,7 @@
-<main class="mx-auto my-48 max-w-7xl px-4">
+<main class="mx-auto md:mt-32 md:mb-12 max-w-7xl px-4 mt-16 mb-6">
   <div class="text-center">
 
-    <img class="mx-auto mb-24 w-48" src="<%= image_path('logo_transparant_background.png') %>" alt="Hamers logo">
+    <img class="mx-auto md:mb-24 md:w-48 mb-12 w-24" src="<%= image_path('logo_transparant_background.png') %>" alt="Hamers logo">
 
     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
       <span class="block text-hamers-red-600 hover:text-hamers-yellow-500 xl:inline">Hamers zonder Sikkel</span>
@@ -19,8 +19,6 @@
     </div>
   </div>
 </main>
-
-<%= yield %>
 
 <nav class="flex flex-wrap justify-center">
   <% pages = { Leden: public_leden_path,
