--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,15 +13,6 @@
       <div class="bg-gray-800 pb-32">
         <%= render 'layouts/nav' %>
 
-        <% flash.each do |key, value| %>
-          <% if key == "notice" %>
-            <% key = "info" %>
-          <% elsif key == "error" || key == "alert" %>
-            <% key = "danger" %>
-          <% end %>
-          <div class="alert alert-<%= key %> text-center" role="alert"><%= value %></div>
-        <% end %>
-
         <% if content_for?(:title) %>
           <header class="py-10">
               <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -44,5 +35,6 @@
 
       <%= render "layouts/footer" %>
     </div>
+    <%= render 'layouts/alert' %>
   </body>
 </html>
