--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -1,25 +1,12 @@
-<li id="quote_<%= quote.id %>">
-  <%= link_to gravatar_for(quote.user), quote.user %>
-  <span class="user">
-    <%= link_to quote.user.name, quote.user %>
-  </span>
-  <span class="content">
-    <%= quote.text %>
-  </span>
-  <span class="text-muted">
-    <i class="far fa-clock"></i> <%= time_ago_in_words(quote.created_at) %> geleden.
-  </span>
-  <div class="btn-group">
-    <%= link_to edit_quote_path(quote),
-      class: 'btn btn-default btn-sm' do %>
-      <i class="fas fa-pencil-alt"></i>
-    <% end %>
-    <%= link_to quote,
-      method: :delete,
-      data: {confirm: 'Weet je het zeker?'},
-      title: quote.text,
-      class: 'btn btn-default btn-sm' do %>
-      <i class="far fa-trash-alt"></i>
-    <% end %>
+<li class="py-4">
+  <div class="flex space-x-3">
+    <%= gravatar_for quote.user, class: "h-6 w-6 rounded-full" %>
+    <div class="flex-1 space-y-1">
+      <div class="flex items-center justify-between">
+        <h3 class="text-sm font-medium"><%= @quote.user.name %></h3>
+        <p class="text-sm text-gray-500"><%= time_ago_in_words(quote.created_at) %> geleden.</p>
+      </div>
+      <p class="text-sm text-gray-500"><%= quote.text %></p>
+    </div>
   </div>
 </li>
