--- a/app/views/shared/_quote_form.html.erb
+++ b/app/views/shared/_quote_form.html.erb
@@ -1,11 +1,27 @@
-<%= form_for(@quote) do |f| %>
-    <%= render 'shared/error_messages', object: f.object %>
-    <div class="form-group">
-      <%= f.text_area :text, placeholder: 'Wat zei die lul?', class: 'form-control' %>
-    </div>
-      <div id="user-selector" class="form-group btn-group dropdown">
-        <% users_array = User.all.map { |user| [user.name, user.id] } %>
-        <%= f.select :user_id, options_for_select(users_array), {}, class: 'form-control selectpicker' %>
+<div class="bg-white overflow-hidden md:shadow md:rounded-lg">
+  <div class="md:p-5">
+    <div class="flex items-center">
+      <%= form_for @quote, html: { class: "w-full" } do |f| %>
+      <%= render 'shared/error_messages', object: f.object %>
+      <div>
+        <label for="text" class="block text-sm font-medium text-gray-700">
+          Quote
+        </label>
+        <div class="mt-1">
+          <%= f.text_area :text,
+              placeholder: 'Wat zei die lul?',
+              rows: 2,
+              class: 'shadow-sm focus:ring-indigo-500 focus:border-indigo-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md' %>
+        </div>
       </div>
-    <%= f.submit 'Quote', class: 'btn btn-large btn-primary' %>
-<% end %>
+      <div class="col-span-6 sm:col-span-3">
+        <% users_array = User.all.reverse.map { |user| [user.name, user.id] } %>
+        <%= f.select :user_id, options_for_select(users_array), {}, class: 'form-control selectpicker mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm' %>
+      </div>
+      <div class="px-4 py-3 text-right sm:px-6">
+        <%= f.submit 'Quote', class: 'inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
+      </div>
+      <% end %>
+    </div>
+  </div>
+</div>
