move list to partial

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,9 +18,4 @@
     </div>
   </div>
 
-<div>
-  <ul role="list" class="divide-y divide-gray-200">
-      <%= render @quotes %>
-    </ul>
-  </div>
-</div>
+<%= render 'layouts/list', list: @quotes %>
