--- a/app/views/users/settings/main.html.erb
+++ b/app/views/users/settings/main.html.erb
@@ -36,7 +36,7 @@
   </aside>
 
   <div class='lg:col-span-9 lg:pl-6'>
-    <%= render 'form' %>
+    <%= render 'users/settings/form' %>
   </div>
 
   <!--<section>-->
