--- a/app/views/users/settings/password.html.erb
+++ b/app/views/users/settings/password.html.erb
@@ -1,39 +1,10 @@
 <% content_for :title do %>
-  Wijzig je profiel
+  Wijzig je wachtwoord
 <% end %>
 
 <div class="divide-y divide-gray-200 -my-6 lg:grid lg:grid-cols-12 lg:divide-y-0 lg:divide-x">
   <aside class="-ml-6 my-6 lg:col-span-3 lg:pr-6">
     <%= render partial: 'users/settings/menu' %>
-    <%#= link_to "https://gravatar.com/emails", target: "_blank" do %>
-    <%#= gravatar_for @user, size: 300 %>
-    <%# end %>
-
-    <!--    <div class="relative inset-0 flex items-center my-4 lg:-mr-6">-->
-    <!--      <div class="w-full border-t border-gray-300"></div>-->
-    <!--    </div>-->
-
-    <!--    <div>-->
-    <!--      <span class="font-bold">Groepen</span>-->
-    <!--      <ul>-->
-    <%# @user.usergroups.each do |group| %>
-    <!--          <li><%#= group.name %></li>-->
-    <%# end %>
-    <!--      </ul>-->
-    <%# if current_user.admin? %>
-    <%#= link_to usergroups_user_path(@user), class: 'inline-flex items-center px-2.5 py-1.5 border border-transparent text-xs font-medium rounded text-hamers-red-700 bg-hamers-red-100 hover:bg-hamers-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-hamers-red-500' do %>
-    <!--          Wijzig groepen-->
-    <%# end %>
-    <%# end %>
-    <!--    </div>-->
-
-    <!--    <div class="relative inset-0 flex items-center my-4 lg:-mr-6">-->
-    <!--      <div class="w-full border-t border-gray-300"></div>-->
-    <!--    </div>-->
-
-    <!--    <div class="lg:divide-solid">-->
-    <!--      <h4>Groepen</h4>-->
-    <!--    </div>-->
   </aside>
 
   <div class='lg:col-span-9 lg:pl-6'>
