--- a/app/views/users/settings/_menu.html.erb
+++ b/app/views/users/settings/_menu.html.erb
@@ -1,9 +1,10 @@
 <nav class="space-y-1">
 
   <% items = {
-    Profiel: { path: edit_user_path, icon: 'user-circle' },
-    Wachtwoord: { path: edit_password_users_path, icon: 'lock-closed' },
-    'API-sleutels': { path: '#', icon: 'key' }
+    Profiel: { path: edit_user_path(current_user), icon: 'user' },
+    Foto: { path: "https://gravatar.com/emails", icon: 'user-circle' },
+    Wachtwoord: { path: edit_password_users_path(current_user), icon: 'lock-closed' },
+    'API-sleutels': { path: user_api_keys_path(current_user), icon: 'key' }
   } %>
 
   <% items.each do |name, options| %>
