--- a/app/views/users/settings/api_keys.html.erb
+++ b/app/views/users/settings/api_keys.html.erb
@@ -8,9 +8,8 @@
   </aside>
 
   <div class='lg:col-span-9 lg:pl-6'>
-    <% current_user.api_keys.each do |key| %>
-      <% key %>
-    <% end %>
+    <%= render 'users/settings/form_api_keys' %>
+
     <div class="my-6 flex flex-col">
       <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
         <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
@@ -18,63 +17,28 @@
             <table class="min-w-full divide-y divide-gray-200">
               <thead class="bg-gray-50">
               <tr>
-                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                  Name
-                </th>
-                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                  Title
-                </th>
-                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                  Email
-                </th>
-                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                  Role
-                </th>
-                <th scope="col" class="relative px-6 py-3">
-                  <span class="sr-only">Edit</span>
-                </th>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Naam</th>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Sleutel</th>
+                <th scope="col" class="relative px-6 py-3"><span class="sr-only">Verwijder</span></th>
               </tr>
               </thead>
               <tbody>
-              <!-- Odd row -->
-              <tr class="bg-white">
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                  Jane Cooper
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                  Regional Paradigm Technician
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                  jane.cooper@example.com
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                  Admin
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                  <a href="#" class="text-indigo-600 hover:text-indigo-900">Edit</a>
-                </td>
-              </tr>
 
-              <!-- Even row -->
-              <tr class="bg-gray-50">
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                  Cody Fisher
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                  Product Directives Officer
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                  cody.fisher@example.com
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                  Owner
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                  <a href="#" class="text-indigo-600 hover:text-indigo-900">Edit</a>
-                </td>
-              </tr>
-
-              <!-- More people... -->
+              <% current_user.api_keys.each_with_index do |key, index| %>
+                <tr class="<%= index % 2 == 0 ? "bg-white" : "bg-gray-50" %>">
+                  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                    <%= key.name %>
+                  </td>
+                  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                    <%= key.key %>
+                  </td>
+                  <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
+                    <%= link_to [current_user, key], method: :delete, data: { confirm: 'Zeker weten?' }, class: 'text-hamers-red-500 hover:text-hamers-red-600' do %>
+                      <%= heroicon('trash', style: :outline, class_name: "h-6 w-6") %>
+                    <% end %>
+                  </td>
+                </tr>
+              <% end %>
               </tbody>
             </table>
           </div>
