--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,6 +4,9 @@
       <%= render 'shared/user_info' %>
       <%= render 'shared/next_event' %>
       <%= render 'shared/quote_form' %>
+      <%= render 'shared/trail' %>
+      <%= render 'shared/blog' %>
+      <%= render 'shared/random_biertje' %>
     </div>
   </div>
 
