--- a/app/views/shared/_blog.html.erb
+++ b/app/views/shared/_blog.html.erb
@@ -1,9 +1,29 @@
-<ul>
-  <% @blog.each do |f| %>
-      <li>
-        <%= link_to f do %>
-          <%= f.created_at.strftime('%d-%m-%Y') %> - <%= f.title %>
-          <% end %>
-      </li>
-  <% end %>
-</ul>
+<div class="bg-white overflow-hidden shadow rounded-lg hidden md:block">
+  <div class="px-5">
+    <%= link_to blogitems_path do %>
+      <h2 class="text-indigo-400 text-xl font-extrabold my-2">Blogposts</h2>
+    <% end %>
+    <div class="flex items-center w-full">
+      <ul class="divide-y divide-gray-200 w-full">
+        <% @blogitems.each do |b| %>
+       <li class="py-1 w-full">
+          <div class="flex space-x-3">
+            <%= gravatar_for b.user, class: "h-6 w-6 rounded-full" %>
+            <div class="flex-1 space-y-1">
+              <div class="flex items-center justify-between">
+                <span class="text-sm font-medium"><%= link_to b.title, b %></span>
+                <% if b.public %>
+                  <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">
+                    Openbaar
+                  </span>
+                <% end %>
+              </div>
+              <p class="text-sm text-gray-500"><%= time_ago_in_words(b.created_at) %> geleden.</p>
+            </div>
+          </div>
+        </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</div>
