--- a/app/views/shared/_quote_form.html.erb
+++ b/app/views/shared/_quote_form.html.erb
@@ -1,12 +1,10 @@
 <div class="bg-white overflow-hidden md:shadow md:rounded-lg">
   <div class="md:p-5">
+    <h2 class="text-indigo-400 text-xl font-extrabold my-2">Quote</h2>
     <div class="flex items-center">
       <%= form_for @quote, html: { class: "w-full" } do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
       <div>
-        <label for="text" class="block text-sm font-medium text-gray-700">
-          Quote
-        </label>
         <div class="mt-1">
           <%= f.text_area :text,
               placeholder: 'Wat zei die lul?',
