update user info

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
     <%= csrf_meta_tags %>
   </head>
-  <body class="h-screen">
+  <body class="h-full">
     <div class="bg-gray-100 h-full">
       <div class="bg-gray-800 pb-32">
         <%= render 'layouts/nav' %>
