--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,19 +8,10 @@
 
     <%= csrf_meta_tags %>
   </head>
-  <body class="h-screen">
+  <body class="h-full">
     <div class="bg-gray-100 h-full">
       <div class="bg-gray-800 pb-32">
         <%= render 'layouts/nav' %>
-
-        <% flash.each do |key, value| %>
-          <% if key == "notice" %>
-            <% key = "info" %>
-          <% elsif key == "error" || key == "alert" %>
-            <% key = "danger" %>
-          <% end %>
-          <div class="alert alert-<%= key %> text-center" role="alert"><%= value %></div>
-        <% end %>
 
         <% if content_for?(:title) %>
           <header class="py-10">
@@ -44,5 +35,6 @@
 
       <%= render "layouts/footer" %>
     </div>
+    <%= render 'layouts/alert' %>
   </body>
 </html>
