--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,43 +1,24 @@
-<div class="col-md-5">
-  <aside>
-    <section>
+<div class="mt-8">
+  <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="mt-2 grid grid-cols-1 gap-5 sm:grid-cols-2 lg:grid-cols-3">
       <%= render 'shared/user_info' %>
-    </section>
-    <section>
-      <%= render 'shared/random_biertje' %>
-    </section>
-    <section>
-      <%= render partial: 'quotes/quote', object: @random_quote %>
-    </section>
-    <section style="overflow: visible;">
+      <%= render 'shared/next_event' %>
       <%= render 'shared/quote_form' %>
-    </section>
-    <section>
-      <%= link_to events_path do %>
-        <h5><i class="far fa-calendar-alt"></i> Aankomende activiteiten</h5>
-      <% end %>
-      <%= render 'shared/activiteiten' %>
-    </section>
-    <section>
-      <%= link_to news_index_path do %>
-        <h5><i class="far fa-newspaper"></i> Recent nieuws</h5>
-      <% end %>
-      <%= render 'shared/news' %>
-    </section>
-    <section>
-      <%= link_to blogitems_path do %>
-        <h5><i class="fa fa-rss"></i> Recente blogposts</h5>
-      <% end %>
-      <%= render 'shared/blog' %>
-    </section>
-    <section>
-      <%= link_to trail_path do %>
-        <h5><i class="fas fa-history"></i> Log</h5>
-      <% end %>
       <%= render 'shared/trail' %>
-    </section>
-  </aside>
-</div>
-<div class="col-md-7">
-  <%= render 'shared/feed' %>
-</div>
+      <%= render 'shared/blog' %>
+      <%= render 'shared/random_biertje' %>
+    </div>
+  </div>
+
+  <div class="relative md:my-4">
+    <div class="absolute inset-0 flex items-center" aria-hidden="true">
+      <div class="w-full border-t border-gray-300"></div>
+    </div>
+    <div class="relative flex justify-center">
+      <span class="px-2 bg-white text-sm text-gray-500">
+        Quotes
+      </span>
+    </div>
+  </div>
+
+<%= render 'layouts/list', list: @quotes %>
