--- a/app/views/users/settings/api_keys.html.erb
+++ b/app/views/users/settings/api_keys.html.erb
@@ -15,17 +15,17 @@
         <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
           <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
             <table class="min-w-full divide-y divide-gray-200">
-              <thead class="bg-gray-50">
+              <thead class="bg-gray-100">
               <tr>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Naam</th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Sleutel</th>
                 <th scope="col" class="relative px-6 py-3"><span class="sr-only">Verwijder</span></th>
               </tr>
               </thead>
-              <tbody>
 
+              <tbody class="divide-y divide-gray-200">
               <% current_user.api_keys.each_with_index do |key, index| %>
-                <tr class="<%= index % 2 == 0 ? "bg-white" : "bg-gray-50" %>">
+                <tr class="<%= index % 2 == 0 ? "bg-white" : "bg-gray-100" %>">
                   <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
                     <%= key.name %>
                   </td>
@@ -33,7 +33,7 @@
                     <%= key.key %>
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                    <%= link_to [current_user, key], method: :delete, data: { confirm: 'Zeker weten?' }, class: 'text-hamers-red-500 hover:text-hamers-red-600' do %>
+                    <%= link_to [current_user, key], method: :delete, data: { confirm: 'Zeker weten?' }, class: 'float-right text-hamers-red-500 hover:text-hamers-red-600' do %>
                       <%= heroicon('trash', style: :outline, class_name: "h-6 w-6") %>
                     <% end %>
                   </td>
