--- a/app/views/users/settings/password.html.erb
+++ b/app/views/users/settings/password.html.erb
@@ -2,12 +2,12 @@
   Wijzig je wachtwoord
 <% end %>
 
-<div class="divide-y divide-gray-200 -my-6 lg:grid lg:grid-cols-12 lg:divide-y-0 lg:divide-x">
-  <aside class="-ml-6 my-6 lg:col-span-3 lg:pr-6">
+<div class="divide-y divide-gray-200 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
+  <aside class="-ml-6 my-6 md:col-span-3 md:pr-6">
     <%= render partial: 'users/settings/menu' %>
   </aside>
 
-  <div class='lg:col-span-9 lg:pl-6'>
+  <div class='md:col-span-9 md:pl-6'>
     <%= render 'users/settings/form_password' %>
   </div>
 </div>
