--- a/app/views/users/settings/_menu.html.erb
+++ b/app/views/users/settings/_menu.html.erb
@@ -10,12 +10,12 @@
   <div class="hidden md:block">
     <% items.each do |name, options| %>
       <% if current_page?(options[:path]) %>
-        <%= link_to options[:path], class: "border-hamers-red-400 text-hamers-red-400 hover:bg-gray-50 hover:text-hamers-red-600 group border-l-4 px-3 py-2 flex items-center text-sm font-medium" do %>
+        <%= link_to options[:path], class: "border-hamers-red-400 text-hamers-red-400 bg-gray-100 hover:text-hamers-red-600 group border-l-4 px-3 py-2 flex items-center text-sm font-medium" do %>
           <%= heroicon(options[:icon], style: :outline, class_name: "text-hamers-red-400 group-hover:text-hamers-red-600 flex-shrink-0 -ml-1 mr-3 h-6 w-6") %>
           <span class="truncate"><%= name %></span>
         <% end %>
       <% else %>
-        <%= link_to options[:path], class: "border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group border-l-4 px-3 py-2 flex items-center text-sm font-medium" do %>
+        <%= link_to options[:path], class: "border-transparent text-gray-900 hover:bg-gray-100 hover:text-gray-900 group border-l-4 px-3 py-2 flex items-center text-sm font-medium" do %>
           <%= heroicon(options[:icon], style: :outline, class_name: "text-gray-400 group-hover:text-gray-500 flex-shrink-0 -ml-1 mr-3 h-6 w-6") %>
           <span class="truncate"><%= name %></span>
         <% end %>
