Minor quote tweaks

--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -1,12 +1,12 @@
 <li class="py-4">
   <div class="flex space-x-3">
-    <%= gravatar_for quote.user, class: "h-6 w-6 rounded-full" %>
+    <%= gravatar_for quote.user, class: "h-6 w-6 rounded-full self-center" %>
     <div class="flex-1 space-y-1">
-      <div class="flex items-center justify-between">
-        <h3 class="text-sm font-medium"><%= @quote.user.name %></h3>
+      <div class="flex items-center justify-between align-items-center self-center">
+        <h3 class="text-sm font-medium"><%= quote.text %></h3>
         <p class="text-sm text-gray-500"><%= time_ago_in_words(quote.created_at) %> geleden.</p>
       </div>
-      <p class="text-sm text-gray-500"><%= quote.text %></p>
+      <p class="text-sm text-gray-500"><%= @quote.user.name %></p>
     </div>
   </div>
 </li>
